Fixed selectors position/z-index

--- a/mod_slideshow/modules/mod_slideshow/media/slideshow.css
+++ b/mod_slideshow/modules/mod_slideshow/media/slideshow.css
@@ -33,6 +33,7 @@
 	bottom: -17px;
 	left: 0;
 	width: 100%;
+	z-index: 3;
 	
 	text-align: center;
 }
